# map_the_field

./: .gitignore  CLAUDE.md  README.md  SKILL_VALIDATE_COMPANY.md  draft_skill.md  justfile  map_the_field_project.md  pyproject.toml
backend_app/: node_store.py  screening_app.py  utils.py
backlog/: browser_triage_tool.md  data_source.md  firefox_extension_poc.md  index_and_search.md  node_store.md  outdated_summaries.md  session_2026-04-25_1425.md  siren_pipeline_improvements.md  structured_node_fields.md
backlog/done/: project_directory.md
backlog/project_logs/: session_2026-04-25_1425.md  session_2026-04-25_continued.md  session_2026-04-26_local_llm.md
content/: index.md  log.md
content/articles/: index.md
content/sources/: index.md
content/wiki/: index.md
firefox_ext/: sidebar.js
map_the_field.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mtf_firefox_ext/: README.md  manifest.json  sidebar.html  sidebar.js
pipeline_siren/: add_company_summary.py  bootstrap_nodes.py  export_naf.py  search_duckduckgo.py  search_siren_wikidata.py
pipeline_siren/assets/: prompt_image.md
tools/: LLM_SETUP.md  README.md  add_company_summary.py  bootstrap_nodes.py  data_science_naf_codes.csv  download_entreprises.py  export_naf.py  int_courts_naf_rev_2.xls  llm_validate.py  requirements.txt  screening_app.py  search_cities.py  search_duckduckgo.py  search_entreprises.py  search_siren_wikidata.py  siren_pipeline.md  utils.py  validate_web_prescence_local_llm.py  validate_web_presence.py  view_entreprises.py
(+2 files in other folders)
